--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div id="header">
+        <h1 id="heading">Calculator</h1>
+    </div>
+    <div id="main"></div>
+    <div id="footer"></div>
     <script src="script.js"></script>
 </body>
 </html>
