add footer content and footer styling

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
         <h1 id="heading">Calculator</h1>
     </div>
     <div id="main"></div>
-    <div id="footer"></div>
+    <div id="footer">
+        <p class="copyright">Copyright © <script>document.write(new Date().getFullYear())</script> Kgodisho Mononyane</p>
+        <p><a href="https://github.com/Kgodisho-Mononyane" target="_blank" class="link">Github</a></p>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
