add main container styling and content

--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
     <div id="header">
         <h1 id="heading">Calculator</h1>
     </div>
-    <div id="main"></div>
+    <div id="main">
+        <div id="calculator-container">
+            <input type="text" id="display" readonly>
+            <div id="button-container"></div>
+        </div>
+    </div>
     <div id="footer">
         <p class="copyright">Copyright © <script>document.write(new Date().getFullYear())</script> Kgodisho Mononyane</p>
         <p><a href="https://github.com/Kgodisho-Mononyane" target="_blank" class="link">Github</a></p>
