add calculator buttons

--- a/index.html
+++ b/index.html
@@ -13,7 +13,28 @@
     <div id="main">
         <div id="calculator-container">
             <input type="text" id="display" readonly>
-            <div id="button-container"></div>
+            <div id="button-container">
+                <button id="delete" class="buttons operator"><img src="img/delete.png" alt="delete-btn" height="30"></button>
+                <button id="clear-btn" class="buttons operator" >AC</button>
+                <button id="remainder" class="buttons operator" >%</button>
+                <button id="division" class="buttons operator">/</button>
+                <button id="seven" class="number buttons">7</button>
+                <button id="eight" class="number buttons">8</button>
+                <button id="nine" class="number buttons">9</button>
+                <button id="multiplication" class="buttons operator" >x</button>
+                <button id="four" class="number buttons">4</button>
+                <button id="five" class="number buttons">5</button>
+                <button id="six" class="number buttons">6</button>
+                <button id="subtraction" class="buttons operator" >-</button>
+                <button id="one" class="number buttons">1</button>
+                <button id="two" class="number buttons">2</button>
+                <button id="three" class="number buttons">3</button>
+                <button id="addition"class="buttons operator" >+</button>
+                <button id="zero" class="number buttons">0</button>
+                <button id="point" class="buttons dot" >.</button>
+                <a href="https://github.com/Kgodisho-Mononyane/calculator-odin" target="_blank" class="link"><button class="buttons" id="github"><img src="img/github-logo.png" alt="github logo" height="40"></button></a>
+                <button id="equals" class="buttons operator" >=</button>
+            </div>
         </div>
     </div>
     <div id="footer">
