change css units

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <button id="addition"class="buttons operator" >+</button>
                 <button id="zero" class="number buttons">0</button>
                 <button id="point" class="buttons dot" >.</button>
-                <a href="https://github.com/Kgodisho-Mononyane/calculator-odin" target="_blank" class="link"><button class="buttons" id="github"><img src="img/github-logo.png" alt="github logo" height="40"></button></a>
+                <a href="" target="_blank" class="link"><button class="buttons" id="github"><img src="img/github-logo.png" alt="github logo" height="40"></button></a>
                 <button id="equals" class="buttons operator" >=</button>
             </div>
         </div>
