add click event listner for all the buttons

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id="calculator-container">
             <input type="text" id="display" readonly>
             <div id="button-container">
-                <button id="delete" class="buttons operator"><img src="img/delete.png" alt="delete-btn" height="30"></button>
+                <button id="delete-btn" class="buttons operator"><img src="img/delete.png" alt="delete button" height="30" id="delete-img"></button>
                 <button id="clear-btn" class="buttons operator" >AC</button>
                 <button id="remainder" class="buttons operator" >%</button>
                 <button id="division" class="buttons operator">/</button>
